[build-system]
requires = [
    "setuptools >= 65.5.0",
    "setuptools_scm[toml] >= 7.0.5",
]
build-backend = "setuptools.build_meta"


[project]
name = "openmc_plot"
authors = [
  { name="Jonathan Shimwell", email="mail@jshimwell.com" },
]
license = {file = "LICENSE"}
description = "A Python package containing a collection of scripts for producing and downloading data for OpenMC"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["openmc", "plot"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
    "openmc_source_plotter>=0.7.0",
    "dagmc_geometry_slice_plotter>=0.3.1",
    "openmc_geometry_plot>=0.4.2",
    "openmc_regular_mesh_plotter>=1.2.1",
    "openmc_depletion_plotter>=0.4.0",
    "openmc_cylindrical_mesh_plotter>=0.3.2",
]
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "src/openmc_plot/_version.py"


[project.optional-dependencies]
tests = [
    "pytest",
    "requests"
]

[project.urls]
"Homepage" = "https://github.com/fusion-energy/openmc_plot"
"Bug Tracker" = "https://github.com/fusion-energy/openmc_plot/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
openmc_plot = "openmc_plot.launch:main"
openmc-plot = "openmc_plot.launch:main"
